1.1.3     _/__/21
    - Improved "item" custom block drop tag to include anything in the Material class
    - Added functionality to calculate custom block drops for blocks that break because from explosions

1.1.2     7/26/21
    - Overhauled command syntax - all commands are now:  /woz [command] [args]
        - For example,  /wozreload  is now  /woz reload  , and  /wozdatabase delete [world]  is now  /woz database delete [world]
        - Information about this plugin can be found by running  /woz info  or just  /woz
    - Commands that are run incorrectly or produce an error now send better formatted and more detailed error messages
    - Moved block un-logging from BlockBreakEvent and BlockChange packet handler into BlockDropItemEvent handler (no effect on functionality)
    - Overhauled custom block logging system - custom blocks are now defined in separate files and logged using their IDs
        - All data for custom block types is stored in files in the new  CustomItems  folder
            - File names in this folder can be arbitrary, and there can be any number of custom blocks in each file
            - Sub-folders with definition files in the  CustomItems  folder are allowed
        - Removed functionality for the  "keep-mojang-prefix"  config option
        - Custom block items only require the NBT tags  IsCustomBlock: [boolean]  and  CustomBlock: [custom block ID]
        - Custom blocks now support custom drops, including drop chances and items with NBT tags
            - See the demo file in the plugin data folder at  WorldOfZombies\CustomItems\demo.yml  for an example of all of the available options in a custom block definition and their formatting
                - If this file does not exist, temporarily remove or clear the  CustomItems  folder, and it will be automatically added
    - Added new command:  /woz database
        - /woz database delete [world]  deletes all of the custom block data in a world